--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.1.11",
     "gatsby": "^4.23.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
