--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.11",
     "gatsby": "^4.23.0",
+    "gatsby-source-filesystem": "^4.23.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
